--- a/homePage.css
+++ b/homePage.css
@@ -1,11 +1,24 @@
+ @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;600;700;900&display=swap');
+
  * {
      margin: 0;
      padding: 0;
      box-sizing: border-box;
  }
 
+ body {
+     background-image: url('images/bgPotfolio.png.jpg');
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+     background-size: 1920px;
+ }
+
+ .potfolio {
+     position: fixed;
+ }
+
  nav {
-     background-color: rgba(150, 220, 235, 0.8);
+     background-color: rgba(108, 140, 145, 0.8);
      width: 1920px;
      height: 80px;
      top: 1px;
@@ -56,7 +69,7 @@
      top: 81px;
      width: 1920px;
      height: 300px;
-     background-color: rgb(135, 185, 230);
+     background-color: rgb(80, 89, 70, 0.8);
      position: absolute;
  }
 
@@ -101,7 +114,7 @@
      height: 105px;
      top: 381px;
      left: 1px;
-     background: #fff;
+     background: rgb(255, 255, 255);
      position: absolute;
      display: grid;
      grid-template-columns: 150px 150px 150px 150px;
@@ -112,7 +125,7 @@
  }
 
  .about {
-     background-color: rgba(150, 220, 235, 0.8);
+     background-color: rgba(108, 140, 145, 0.8);
      width: 1920px;
      height: 500px;
      top: 486px;
@@ -142,7 +155,7 @@
  }
 
  #btn {
-     background-color: rgb(100, 165, 230);
+     background-color: rgb(233, 233, 233);
      border: none;
      width: 145px;
      height: 40px;
@@ -162,7 +175,7 @@
      top: 981px;
      left: 1px;
      position: absolute;
-     background-color: rgb(135, 185, 230);
+     background-color: rgb(80, 89, 70, 0.8);
  }
 
 
@@ -178,7 +191,7 @@
  .item {
      width: 205px;
      height: 315px;
-     background-color: #fff;
+     background-color: lightgrey;
      box-shadow: 3px 3px 15px #00000029;
      border-radius: 10px;
      opacity: 1;
@@ -190,7 +203,7 @@
  }
 
  .projects #btn {
-     background-color: rgb(100, 165, 230);
+     background-color: rgb(80, 89, 70, 0.8);
      border: none;
      width: 122px;
      height: 35px;
@@ -206,7 +219,7 @@
  }
 
  .contact {
-     background-color: #3A3A3A;
+     background-color: rgb(58, 58, 58, 0.8);
      width: 1920px;
      height: 600px;
      left: 1px;
@@ -273,7 +286,7 @@
  }
 
  .icons {
-     background-color: rgb(100, 165, 230);
+     background-color: rgb(82, 132, 138, 0.8);
      top: 2451px;
      left: 1px;
      width: 1920px;
@@ -289,7 +302,7 @@
  }
 
  .credit {
-     background-color: #3A3A3A;
+     background-color: rgb(58, 58, 58, 0.8);
      top: 2571px;
      left: 1px;
      width: 1920px;
